--- a/app.json
+++ b/app.json
@@ -1,6 +1,9 @@
 {
   "pages": [
+    "pages/author/author",
     "pages/index/index",
+    "pages/set/set",
+    "pages/comment/comment",
     "pages/bookdetail/bookdetail",
     "pages/explore/explore",
     "pages/classify/classify",
